Fix issue where log-point badge would mess up vertical text alignment

--- a/packages/bvaughn-architecture-demo/components/console/renderers/shared.module.css
+++ b/packages/bvaughn-architecture-demo/components/console/renderers/shared.module.css
@@ -110,21 +110,28 @@
   color: var(--color-error);
 }
 
-.ColorBadge {
+.ColorBadge,
+.UnicornBadge {
   display: inline-block;
   width: 0.5rem;
   height: 0.5rem;
   flex: 0 0 0.5rem;
+  margin: 0 0.25rem;
+}
+.ColorBadge {
   border-radius: 0.5rem;
   background-color: var(--badge-color);
-  margin: 0.25rem;
 }
 .UnicornBadge {
+  position: relative;
+  overflow: visible;
+}
+.Unicorn {
   display: inline-block;
   width: 1rem;
   height: 1rem;
-  flex: 0 0 1rem;
-  border-radius: 1rem;
+  margin-top: -0.25rem;
+  margin-left: -0.25rem;
   background-image: url(../../../public/unicorn.svg) !important;
   background-size: auto 100%;
 }
